--- a/webassets/src/css/index.css
+++ b/webassets/src/css/index.css
@@ -7,4 +7,6 @@ img { max-width: 100%; }
   margin-left: auto;
   padding-left: 15px;
   padding-right: 15px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
