--- a/webassets/src/css/index.css
+++ b/webassets/src/css/index.css
@@ -9,4 +9,23 @@ img { max-width: 100%; }
   padding-right: 15px;
   padding-top: 15px;
   padding-bottom: 15px;
+  font-size: 14px;
+  h1 {
+      font-size: 24px;
+  }
+  h2 {
+      font-size: 20px;
+  }
+  h3 {
+      font-size: 18px;
+  }
+  h4 {
+      font-size: 16px;
+  }
+  h5 {
+      font-size: 15px;
+  }
+  h6 {
+      font-size: 14px;
+  }
 }
