--- a/webassets/src/css/index.css
+++ b/webassets/src/css/index.css
@@ -9,23 +9,14 @@ img { max-width: 100%; }
     padding-right: 15px;
     padding-top: 15px;
     padding-bottom: 15px;
-    font-size: 14px;
-}
-h1 {
-    font-size: 24px;
-}
-h2 {
-    font-size: 20px;
-}
-h3 {
-    font-size: 18px;
-}
-h4 {
     font-size: 16px;
+    padding:8px 15px 15px;
+    text-align:justify;
 }
-h5 {
-    font-size: 15px;
-}
-h6 {
-    font-size: 14px;
-}
+h1{font-size:1.6em;}
+h2{font-size:1.4em}
+h3{font-size:1.2em}
+h4{font-size:1.0em}
+h5{font-size:0.9em}
+h6{font-size:0.8em}
+h1,h2,h3,h4,h5,h6{padding 0.5em 0;}
