--- a/webassets/src/css/index.css
+++ b/webassets/src/css/index.css
@@ -19,4 +19,4 @@ h3{font-size:1.2em}
 h4{font-size:1.0em}
 h5{font-size:0.9em}
 h6{font-size:0.8em}
-h1,h2,h3,h4,h5,h6{padding 0.5em 0;}
+h1,h2,h3,h4,h5,h6{padding:0.05em 0 0.2em;}
